--- a/test/fixtures/stripe_payment_intents.yml
+++ b/test/fixtures/stripe_payment_intents.yml
@@ -1,14 +1,14 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  amount_recieved: 1
+  amount_received: 1
   amount_captured: 1
   stripe_invoice_id: MyString
   stripe_id: MyString
   stripe_customer_id: MyString
 
 two:
-  amount_recieved: 1
+  amount_received: 1
   amount_captured: 1
   stripe_invoice_id: MyString
   stripe_id: MyString
