--- a/config/storage.yml
+++ b/config/storage.yml
@@ -13,3 +13,7 @@ amazon_prod:
     <%= Rails.application.credentials.aws[:secret_access_key] %>
   region: <%= Rails.application.credentials.aws[:region] %>
   bucket: <%= Rails.application.credentials.aws[:prod][:bucket] %>
+
+test:
+  service: Disk
+  root: <%= Rails.root.join("tmp/storage") %>
