--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.2.1",
+    "@rails/webpacker": "5.3.0",
     "bootstrap": "^5.0.0-beta2",
-    "stimulus": "^2.0.0"
+    "flatpickr": "^4.6.9",
+    "node-sass": "^7.0.1",
+    "stimulus": "^2.0.0",
+    "stimulus-flatpickr": "^1.4.0"
   },
   "version": "0.1.0",
   "devDependencies": {
