--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.3.0",
+    "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.0.0-beta2",
     "flatpickr": "^4.6.9",
     "node-sass": "^7.0.1",
+    "sortablejs": "^1.14.0",
     "stimulus": "^2.0.0",
-    "stimulus-flatpickr": "^1.4.0"
+    "stimulus-flatpickr": "^1.4.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3"
   }
 }
