--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@popperjs/core": "^2.9.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
+    "@rails/request.js": "^0.0.6",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.0.0-beta2",
