Adds sidekiq worker & procfile And url to production db config

--- a/config/database.yml
+++ b/config/database.yml
@@ -84,3 +84,4 @@ production:
   database: teensybit_production
   username: teensybit
   password: <%= ENV['TEENSYBIT_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
